# MicroTaskManager

./: .env.example  .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  schemas.py  session-kickoff.md  setup.ps1
implementation_plans/: implementation_plan_sprint_001.md.resolved
seprocess/: adapter-codex.md  adr-template.md  discovery-checklist-template.md  implementation-plan-template.md  playbook.md  pr-checklist-template.md  quality-gates-template.md  session-kickoff-template.md  spike-header-template.md
tests/: test_tasks.py
